# tbgpu

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pixi.toml  pyproject.toml
benchmarks/: transfer_bench.py
examples/gpt2/: README.md  __init__.py  model.py  runtime.py  sample.py  test_inference.py
examples/gpt2/kernels/: add.cu  add_bias.cu  attention_qkv_fused.cu  attention_qkv_proj_decode.cu  attention_qkv_proj_fused.cu  encoder_forward.cu  encoder_forward_step.cu  flash_attn_v2.cu  fused_residual_layernorm.cu  gelu.cu  layernorm.cu  matmul_fp32.cu  matmul_tc_tf32.cu  merge_heads.cu  pad_rows.cu  split_qkv.cu  take_last_token.cu  write_kv_cache.cu
tbgpu/: compiler.py  cuda_compat.py  helpers.py  nv_backend.py
tbgpu/autogen/: libc.py  nv.py  nv_570.py  pci.py
tbgpu/runtime/: common.py  device.py  elf.py  memory.py  program.py  transport.py
tbgpu/runtime/nv/: ip.py  nvdev.py
tbgpu/support/: __init__.py  c.py
tbgpu/tinygpu/: README.txt
tests/: flash_attn_v2.py  kernel_profile.py  matmul.py  pinned_host_copy.py  reduce_max.py  stream_wait_event.py  vector_add.py
tests/kernels/: matmul.cu  reduce_max.cu  vector_add.cu  vector_add.ptx
