[project]
name = "tbgpu"
version = "0.1.0"
description = "tbgpu"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tbgpu"]

[tool.ruff]
preview = true
target-version = "py311"
line-length = 150
indent-width = 2
exclude = [
  ".git/",
  "docs/",
  "extra/",
  "test/external/mlperf_resnet",
  "test/external/mlperf_unet3d",
]

[tool.ruff.lint]
select = [
  "F",    # Pyflakes
  "W6",
  "E71",
  "E72",
  "E112", # no-indented-block
  "E113", # unexpected-indentation
  "E203", # whitespace-before-punctuation
  "E272", # multiple-spaces-before-keyword
  "E275", # missing-whitespace-after-keyword
  "E303", # too-many-blank-lines
  "E304", # blank-line-after-decorator
  "E501", # line-too-long
  # "E502",
  "E702",    # multiple-statements-on-one-line-semicolon
  "E703",    # useless-semicolon
  "E731",    # lambda-assignment
  "W191",    # tab-indentation
  "W291",    # trailing-whitespace
  "W293",    # blank-line-with-whitespace
  "UP039",   # unnecessary-class-parentheses
  "C416",    # unnecessary-comprehension
  "RET506",  # superfluous-else-raise
  "RET507",  # superfluous-else-continue
  "A",       # builtin-variable-shadowing, builtin-argument-shadowing, builtin-attribute-shadowing
  "FURB110", # if-exp-instead-of-or-operator
  "RUF018",  # assignment-in-assert
]

# detect unused imports in examples
[tool.ruff.lint.per-file-ignores]
"tbgpu/autogen/**/*.py" = [
  "E501",
  "F401",
  "E722",
  "E731",
  "F821",
  "A006",
  "A002",
  "F811",
]
